Sección 3 - Original
Se cambia el código implementado por el que adjunta el autor al final de la sección 3 (clase 52).